Fix issue with icon text being too close to borders.

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -60,6 +60,11 @@ $tile_size: 256px;
   display: none;
 }
 
+.map_control, .iconic {
+  padding-left:2px;
+  padding-top:2px;
+}
+
 .map_control_zoom, .map_control_bartoggle {
   @include border-radius(7px);
   padding: 5px;
